# dbt-purview-connector

./: LICENSE  README.md  pyproject.toml
src/dbt_purview_connector/: __init__.py
