[project]
name = "dbt-purview-connector"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sam Debruyn", email = "sam@debruyn.dev" }
]
dependencies = [
    "dbt-native-artifacts-parser>=0.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_purview_connector"]
